# streamlit-sandbox

./: Dockerfile  Makefile  pyproject.toml
.github/workflows/: build_and_push.yaml
kubernetes/: app.yaml  rbac.yaml
tests/: test_streamlit_sandbox.py
