[tool.poetry]
name = "streamlit-sandbox"
version = "0.1.0"
description = ""
authors = ["kazukousen <mmchari.0228@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^0.73.1"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
